[package]
name = "finalfusion-utils"
version = "0.11.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "finalfusion utilities"
documentation = "https://docs.rs/finalfusion/"
homepage = "https://github.com/finalfusion/finalfusion-rust"
repository = "https://github.com/finalfusion/finalfusion-rust"
license = "Apache-2.0 OR BlueOak-1.0.0"
readme = "README.md"

[[bin]]
name = "finalfusion"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = "2"
env_logger = "0.8"
indicatif = "0.15"
ndarray = "0.14"
num_cpus = "1"
rayon = "1"
reductive = "0.6"
finalfusion = "0.15"
stdinout = "0.4"
toml = "0.5"

[dependencies.intel-mkl-src]
version = "0.6"
optional = true
default-features = false
features = ["mkl-static-ilp64-seq"]

[dependencies.netlib-src]
version = "0.8"
optional = true
default-features = false
features = ["cblas", "lapacke", "system"]

[dependencies.openblas-src]
version = "0.10"
optional = true
features = ["system"]

[features]
default = []
opq = ["reductive/opq-train"]
intel-mkl = ["opq", "ndarray/blas", "intel-mkl-src"]
netlib = ["opq", "ndarray/blas", "netlib-src"]
openblas = ["opq", "ndarray/blas", "openblas-src"]
