[package]
name = "finalfusion-utils"
version = "0.13.1"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "finalfusion utilities"
documentation = "https://docs.rs/finalfusion/"
homepage = "https://github.com/finalfusion/finalfusion-rust"
repository = "https://github.com/finalfusion/finalfusion-rust"
license = "Apache-2.0 OR BlueOak-1.0.0"
readme = "README.md"

[[bin]]
name = "finalfusion"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = "2"
env_logger = "0.9"
indicatif = "0.16"
ndarray = "0.15"
num_cpus = "1"
rayon = "1"
reductive = "0.7"
finalfusion = "0.16"
stdinout = "0.4"
toml = "0.5"

[dependencies.accelerate-src]
version = "0.3"
optional = true

[dependencies.intel-mkl-src]
version = "0.6"
optional = true
default-features = false

[dependencies.netlib-src]
version = "0.8"
optional = true
default-features = false
features = ["cblas", "lapacke", "system"]

[dependencies.openblas-src]
version = "0.9"
optional = true
features = ["system"]

[features]
default = []
opq = ["reductive/opq-train"]

# BLAS and LAPACK libraries.
accelerate = ["opq", "ndarray/blas", "accelerate-src"]
intel-mkl = ["opq", "ndarray/blas", "intel-mkl-src/mkl-static-lp64-seq", "intel-mkl-src/download"]
intel-mkl-amd = ["opq", "ndarray/blas", "intel-mkl-src/mkl-dynamic-lp64-seq"]
netlib = ["opq", "ndarray/blas", "netlib-src"]
openblas = ["opq", "ndarray/blas", "openblas-src"]
